# sesac_team_project

./: .dockerignore  .env.docker  .gitignore  DB_README.md  Makefile  QUICK_START.md  README.md  benchmark_results.csv  dc.bat  dc.sh  docker-compose.yml  fake_products.csv  fake_users.csv  generate_orders.py  generate_product.py  generate_users.py  kafka_comparison_results.csv  main.py  manage.py  orders.jsonl  pyproject.toml  requirements.txt
GUIDE/: DB_README.md  DOCKER_DEPLOYMENT_GUIDE.md  HISTORICAL_DATA_GUIDE.md  KAFKA_BENCHMARK_GUIDE.md  KAFKA_CONSUMER_GUIDE.md  KAFKA_PRODUCER_GUIDE.md  KAFKA_SETUP_GUIDE.md  ORDER_RULES_GUIDE.md  PROPENSITY_GRADE_GUIDE.md  PYTHON_DEV_GUIDE.md  README.md  implementation_plan.md  presentation_script.md
analysis/: analysis.py  analysis.sql
cache/: __init__.py  cache_worker.py  client.py  config.py  redis_monitor.py
collect/: __init__.py  data_loader.py  order_generator.py  orders.py  product_generator.py  product_rules.json  products.py  purchase_propensity.py  scenario_engine.py  user_generator.py  users.py
database/: crud.py  database.py  init_db.py  models.py
deploy/: .env.example  CHANGELOG_ENV.md  Dockerfile  ENV_GUIDE.md  PYTHON_DEV_GUIDE.md  README.md  docker-compose.benchmark-kafka.yml  docker-compose.benchmark-spark.yml  docker-compose.yml  requirements.txt
kafka/: config.py  consumer.py  exceptions.py
queries/: alerts_dashboard.sql  alerts_rules.sql  dashboard_metrics.sql
report/: kafka_comparison_20260203_084205.html  kafka_comparison_20260203_085029.html
scripts/: generate_historical_data.py
(+50 files in other folders)
