[project]
name = "sesac-team-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka>=2.3.0",
    "faker>=40.1.2",
    "faker-commerce>=1.0.4",
    "pandas>=3.0.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.46",
]
